Fix path, Add clf in deploy_test

--- a/notebooks/deploy_test.ipynb
+++ b/notebooks/deploy_test.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,12 +73,14 @@
     "# from source.training.activation import Activation\n",
     "\n",
     "from source.classifiers.LSTM_Classifier import LSTMClassifier\n",
-    "from source.classifiers.ResCNN_Classifier import ResCNNClassifier"
+    "from source.classifiers.ResCNN_Classifier import ResCNNClassifier\n",
+    "from source.classifiers.PatchTST_classifier import PatchTSTClassifier\n",
+    "from source.training.train_classifier import train_classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,14 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,10 +236,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 01: train_loss=0.6967 acc=0.4611 | val_loss=0.6944 acc=0.5000\n",
+      "Epoch 02: train_loss=0.6932 acc=0.5000 | val_loss=0.6917 acc=0.5000\n",
+      "Epoch 03: train_loss=0.6898 acc=0.5000 | val_loss=0.6891 acc=0.5944\n",
+      "Epoch 04: train_loss=0.6868 acc=0.5833 | val_loss=0.6865 acc=0.5833\n",
+      "Epoch 05: train_loss=0.6844 acc=0.5778 | val_loss=0.6841 acc=0.5500\n",
+      "Epoch 06: train_loss=0.6804 acc=0.5944 | val_loss=0.6819 acc=0.5556\n",
+      "Epoch 07: train_loss=0.6775 acc=0.5944 | val_loss=0.6796 acc=0.5611\n",
+      "Epoch 08: train_loss=0.6744 acc=0.6000 | val_loss=0.6768 acc=0.5611\n",
+      "Epoch 09: train_loss=0.6696 acc=0.6000 | val_loss=0.6738 acc=0.5667\n",
+      "Epoch 10: train_loss=0.6644 acc=0.6111 | val_loss=0.6698 acc=0.5778\n",
+      "Epoch 11: train_loss=0.6578 acc=0.6222 | val_loss=0.6640 acc=0.5889\n",
+      "Epoch 12: train_loss=0.6470 acc=0.6444 | val_loss=0.6533 acc=0.6111\n",
+      "Epoch 13: train_loss=0.6277 acc=0.6667 | val_loss=0.6296 acc=0.6556\n",
+      "Epoch 14: train_loss=0.5877 acc=0.6944 | val_loss=0.5663 acc=0.7111\n",
+      "Epoch 15: train_loss=0.4995 acc=0.7500 | val_loss=0.4290 acc=0.8222\n",
+      "Epoch 16: train_loss=0.4287 acc=0.8333 | val_loss=0.3687 acc=0.8778\n",
+      "Epoch 17: train_loss=0.3837 acc=0.8500 | val_loss=0.3979 acc=0.8556\n",
+      "Epoch 18: train_loss=0.3584 acc=0.8889 | val_loss=0.4118 acc=0.8500\n",
+      "Epoch 19: train_loss=0.3558 acc=0.8944 | val_loss=0.3729 acc=0.8833\n",
+      "Epoch 20: train_loss=0.3425 acc=0.8722 | val_loss=0.3307 acc=0.8889\n",
+      "Epoch 21: train_loss=0.3426 acc=0.8667 | val_loss=0.3498 acc=0.8556\n",
+      "Epoch 22: train_loss=0.3261 acc=0.8722 | val_loss=0.3787 acc=0.8500\n",
+      "Epoch 23: train_loss=0.3112 acc=0.8833 | val_loss=0.3340 acc=0.8722\n",
+      "Epoch 24: train_loss=0.3086 acc=0.8889 | val_loss=0.3246 acc=0.8833\n",
+      "Epoch 25: train_loss=0.2965 acc=0.8833 | val_loss=0.3401 acc=0.8833\n",
+      "Epoch 26: train_loss=0.2944 acc=0.8889 | val_loss=0.3426 acc=0.8556\n",
+      "Epoch 27: train_loss=0.2847 acc=0.8889 | val_loss=0.3282 acc=0.8611\n",
+      "Epoch 28: train_loss=0.2810 acc=0.8889 | val_loss=0.3127 acc=0.8833\n",
+      "Epoch 29: train_loss=0.2821 acc=0.8944 | val_loss=0.3322 acc=0.8611\n",
+      "Epoch 30: train_loss=0.2845 acc=0.9000 | val_loss=0.3372 acc=0.8778\n",
+      "Epoch 31: train_loss=0.2827 acc=0.8944 | val_loss=0.3121 acc=0.8889\n",
+      "Epoch 32: train_loss=0.2654 acc=0.8944 | val_loss=0.2925 acc=0.8944\n",
+      "Epoch 33: train_loss=0.2746 acc=0.8889 | val_loss=0.3005 acc=0.8667\n",
+      "Epoch 34: train_loss=0.2699 acc=0.8778 | val_loss=0.3176 acc=0.8722\n",
+      "Epoch 35: train_loss=0.2675 acc=0.9000 | val_loss=0.2947 acc=0.8889\n",
+      "Epoch 36: train_loss=0.2562 acc=0.8889 | val_loss=0.2724 acc=0.9056\n",
+      "Epoch 37: train_loss=0.2567 acc=0.9000 | val_loss=0.2710 acc=0.8667\n",
+      "Epoch 38: train_loss=0.2557 acc=0.9111 | val_loss=0.2714 acc=0.8833\n",
+      "Epoch 39: train_loss=0.2382 acc=0.9000 | val_loss=0.2674 acc=0.8778\n",
+      "Epoch 40: train_loss=0.2519 acc=0.9056 | val_loss=0.2556 acc=0.8833\n",
+      "Epoch 41: train_loss=0.2321 acc=0.9111 | val_loss=0.2634 acc=0.8889\n",
+      "Epoch 42: train_loss=0.2347 acc=0.9111 | val_loss=0.2431 acc=0.9167\n",
+      "Epoch 43: train_loss=0.2246 acc=0.9111 | val_loss=0.2430 acc=0.9111\n",
+      "Epoch 44: train_loss=0.2219 acc=0.9111 | val_loss=0.2369 acc=0.9111\n",
+      "Epoch 45: train_loss=0.2163 acc=0.9111 | val_loss=0.2350 acc=0.9000\n",
+      "Epoch 46: train_loss=0.2127 acc=0.9167 | val_loss=0.2270 acc=0.9222\n",
+      "Epoch 47: train_loss=0.2168 acc=0.9111 | val_loss=0.2373 acc=0.9111\n",
+      "Epoch 48: train_loss=0.2118 acc=0.9111 | val_loss=0.2162 acc=0.9222\n",
+      "Epoch 49: train_loss=0.2042 acc=0.9222 | val_loss=0.2139 acc=0.9222\n",
+      "Epoch 50: train_loss=0.1976 acc=0.9167 | val_loss=0.2119 acc=0.9222\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf_LSTM = LSTMClassifier(n_classes, hidden_size=50, num_layers=1)\n",
+    "\n",
+    "history, _, _=  train_classifier(\n",
+    "    clf_LSTM,\n",
+    "    train_dl,\n",
+    "    val_loader=test_dl,\n",
+    "    epochs=2,\n",
+    "    lr=1e-3,\n",
+    "    weight_decay=1e-4,\n",
+    "    device=device,\n",
+    "    patience=4,\n",
+    "    verbose_every=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 01: train_loss=0.5020 acc=0.7167 | val_loss=0.4530 acc=0.8556\n",
+      "Epoch 02: train_loss=0.3624 acc=0.8389 | val_loss=0.4647 acc=0.7722\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf_resCNN = ResCNNClassifier(n_classes=n_classes, x_dim=1).to(device)\n",
+    "\n",
+    "history, best_val, best_state = train_classifier(\n",
+    "    clf_resCNN,\n",
+    "    train_loader=train_dl,\n",
+    "    val_loader=test_dl,\n",
+    "    epochs=2,\n",
+    "    lr=1e-3,\n",
+    "    weight_decay=1e-4,\n",
+    "    device=device,\n",
+    "    patience=10,\n",
+    "    verbose_every=1\n",
+    ")\n",
+    "\n",
+    "torch.save(best_state, \"rescnn_classifier_best.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequence length = 144\n"
+     ]
+    }
+   ],
+   "source": [
+    "loader = train_dl\n",
+    "x, _ = next(iter(loader))\n",
+    "seq_len = x.size(1)           # длина последовательности\n",
+    "print(\"Sequence length =\", seq_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 02: train_loss=2.6224 acc=0.7778 | val_loss=1.9763 acc=0.8611\n",
+      "Epoch 04: train_loss=0.8798 acc=0.9389 | val_loss=1.0531 acc=0.8944\n"
+     ]
+    }
+   ],
+   "source": [
+    "# пример гиперпараметров PatchTST (смотри также оригинальные настройки из репо)\n",
+    "patch_params = dict(\n",
+    "    seq_len=seq_len,\n",
+    "    n_layers=3,\n",
+    "    n_heads=8,\n",
+    "    d_model=512,\n",
+    "    d_ff=2048,\n",
+    "    dropout=0.4,\n",
+    "    attn_dropout=0.0,\n",
+    "    patch_len=40,\n",
+    "    stride=24,\n",
+    "    padding_patch=True,\n",
+    "    revin=True,\n",
+    "    affine=False,\n",
+    "    individual=False,\n",
+    "    subtract_last=False,\n",
+    "    decomposition=False,\n",
+    "    kernel_size=25,\n",
+    "    activation=\"gelu\",\n",
+    "    norm=\"BatchNorm\",\n",
+    "    pre_norm=False,\n",
+    "    res_attention=True,\n",
+    "    store_attn=False,\n",
+    ")\n",
+    "\n",
+    "clf_PatchTST = PatchTSTClassifier(\n",
+    "    n_classes=n_classes,\n",
+    "    x_dim=1,\n",
+    "    activation_type=\"identity\",\n",
+    "    patch_kwargs=patch_params\n",
+    ").to(device)\n",
+    "\n",
+    "history, best_val, best_wts = train_classifier(\n",
+    "    model=clf_PatchTST,\n",
+    "    train_loader=train_dl,\n",
+    "    val_loader=test_dl,\n",
+    "    epochs=2,\n",
+    "    lr=1e-3,\n",
+    "    weight_decay=1e-4,\n",
+    "    device=device,\n",
+    "    patience=8,\n",
+    "    verbose_every=2\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
