Deploy_test mba, fix dependencies

--- a/notebooks/deploy_test.ipynb
+++ b/notebooks/deploy_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,14 @@
      "output_type": "stream",
      "text": [
       "cpu\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubnps23/tecHub/AD_intro/advattacks_iitp_summer/a3_env/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -31,6 +39,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "import optuna\n",
     "import os, sys\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +61,6 @@
    ],
    "source": [
     "# changing core directory\n",
-    "\n",
     "dir2 = os.path.abspath('')\n",
     "dir1 = os.path.dirname(dir2)\n",
     "if not dir1 in sys.path:\n",
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -194,15 +202,13 @@
    ],
    "source": [
     "# check data-balance\n",
-    "\n",
     "df = pd.read_csv(TRAIN_PATH, sep='\\t', header=None)\n",
     "\n",
-    "# 1. Считаем количество примеров каждого класса\n",
     "label_counts = df.iloc[:, 0].value_counts().sort_index()\n",
-    "print(f'counts:\\n{label_counts}')                # абсолютные значения\n",
-    "print(f'shares:\\n{label_counts / len(df)}')      # доли\n",
+    "print(f'counts:\\n{label_counts}')     \n",
+    "print(f'shares:\\n{label_counts / len(df)}')\n",
     "\n",
-    "# 2. Быстрый бар-чарт\n",
+    "\n",
     "label_counts.plot.bar()\n",
     "plt.title('Class distribution in TRAIN set')\n",
     "plt.xlabel('Class')\n",
@@ -360,7 +366,7 @@
    "source": [
     "loader = train_dl\n",
     "x, _ = next(iter(loader))\n",
-    "seq_len = x.size(1)           # длина последовательности\n",
+    "seq_len = x.size(1)\n",
     "print(\"Sequence length =\", seq_len)"
    ]
   },
@@ -379,7 +385,6 @@
     }
    ],
    "source": [
-    "# пример гиперпараметров PatchTST (смотри также оригинальные настройки из репо)\n",
     "patch_params = dict(\n",
     "    seq_len=seq_len,\n",
     "    n_layers=3,\n",
@@ -423,6 +428,366 @@
     "    verbose_every=2\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adversarial attacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LEARNING_TARGET = clf_PatchTST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from source.attacks.iFGSM import FGSMAttack, iFGSMAttack\n",
+    "from source.attacks.PGD import PGDAttack \n",
+    "\n",
+    "from source.attacks.attackLSTM import AttackLSTM\n",
+    "from source.attacks.attackResCNN import AttackCNN\n",
+    "from source.attacks.attackPatchTST import AttackPatchTST \n",
+    "\n",
+    "from source.attacks.mba import ModelBasedAttack \n",
+    "\n",
+    "from source.training.train_attacker import train_atk_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LSTM attack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 01 | victim‑loss 0.5128 | acc 0.9611\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.512811976008945, 0.9611111124356587)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atk_LSTM = AttackLSTM(hidden_dim=128, dropout=0.6, x_dim=1, activation_type='tanh').to(device)\n",
+    "for p in clf_LSTM.parameters():\n",
+    "    p.requires_grad_(False)\n",
+    "# clf_LSTM.eval()\n",
+    "\n",
+    "eps_LSTM = 1.371353\n",
+    "train_atk_model(atk_LSTM,\n",
+    "                LEARNING_TARGET,\n",
+    "                train_dl,\n",
+    "                eps=eps_LSTM,\n",
+    "                epochs=1,\n",
+    "                lr=1e-1,\n",
+    "                alpha_l2=6e-4,\n",
+    "                device=device,\n",
+    "                patience=9\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def objective(trial):\n",
+    "    eps = trial.suggest_float(\"eps\",    0.5, 2.0,    log=True)\n",
+    "    lr  = trial.suggest_float(\"lr\",     1e-3, 1e-2,   log=True)\n",
+    "    alpha_l2  = trial.suggest_float(\"alpha_l2\", 1e-5, 1e-1, log=True)\n",
+    "    patience  = trial.suggest_int(\"patience\", 3, 10)\n",
+    "    hidden_dim = trial.suggest_categorical(\"hidden_dim\", [64, 128, 256])\n",
+    "    dropout = trial.suggest_float(\"dropout\", 0.1, 0.6, step=0.1)\n",
+    "\n",
+    "    atk_model = AttackLSTM(\n",
+    "        hidden_dim=hidden_dim, x_dim=1,\n",
+    "        activation_type='tanh', dropout=dropout\n",
+    "    )\n",
+    "\n",
+    "    val_loss, val_acc = train_atk_model(\n",
+    "        atk_model, clf_LSTM, train_dl,\n",
+    "        eps=eps,  epochs=50, lr=lr, alpha_l2=alpha_l2,\n",
+    "        device=device, patience=patience\n",
+    "    )\n",
+    "\n",
+    "    return val_acc\n",
+    "\n",
+    "# study = optuna.create_study(direction=\"minimize\", sampler=optuna.samplers.TPESampler(),\n",
+    "#                             pruner=optuna.pruners.MedianPruner(n_warmup_steps=3))\n",
+    "\n",
+    "# study.optimize(objective, n_trials=50, timeout=60*60)\n",
+    "# print(\"BEST PARAMS:\", study.best_params)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ResCNN attack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 01 | victim‑loss 2.4237 | acc 0.6611\n",
+      "\n",
+      "Epoch 02 | victim‑loss 5.7410 | acc 0.2556\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5.741018507215712, 0.25555555555555554)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atk_resCNN = AttackCNN().to(device)\n",
+    "atk_resCNN = AttackCNN(hidden_dim=64, x_dim=1, activation_type='tanh').to(device)\n",
+    "\n",
+    "# weights_path = 'weights/surr_resCNNfc_CPU_0.28.pth'\n",
+    "\n",
+    "eps_resCNN = 2\n",
+    "train_atk_model(atk_resCNN, LEARNING_TARGET, train_dl,\n",
+    "                eps=eps_resCNN,\n",
+    "                epochs=2, lr=2e-4, alpha_l2=4.5e-05,\n",
+    "                device=device, patience=10, is_debugged=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def objective(trial):\n",
+    "    eps = trial.suggest_float(\"eps\",    0.5, 2.0,    log=True)\n",
+    "    lr  = trial.suggest_float(\"lr\",     1e-3, 1e-2,   log=True)\n",
+    "    alpha_l2  = trial.suggest_float(\"alpha_l2\", 1e-5, 1e-1, log=True)\n",
+    "    patience  = trial.suggest_int(\"patience\", 3, 10)\n",
+    "    hidden_dim = trial.suggest_categorical(\"hidden_dim\", [64, 128, 256])\n",
+    "\n",
+    "    atk_model = AttackCNN(hidden_dim=hidden_dim, x_dim=1, activation_type='tanh')\n",
+    "\n",
+    "    val_loss, val_acc = train_atk_model(\n",
+    "        atk_model, clf_LSTM, train_dl,\n",
+    "        eps=eps,  epochs=50, lr=lr, alpha_l2=alpha_l2,\n",
+    "        device=device, patience=patience\n",
+    "    )\n",
+    "\n",
+    "    return val_acc\n",
+    "\n",
+    "# study = optuna.create_study(direction=\"minimize\", sampler=optuna.samplers.TPESampler(),\n",
+    "#                             pruner=optuna.pruners.MedianPruner(n_warmup_steps=3))\n",
+    "# study.optimize(objective, n_trials=50, timeout=60*60)\n",
+    "# print(\"BEST PARAMS:\", study.best_params)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PatchTST Attack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 01 | victim‑loss 0.5375 | acc 0.9611\n",
+      "\n",
+      "Epoch 02 | victim‑loss 0.4949 | acc 0.9500\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.4949381139543321, 0.949999992052714)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patch_params = dict(\n",
+    "    seq_len=seq_len,\n",
+    "    n_layers=3,\n",
+    "    n_heads=8,\n",
+    "    d_model=512,\n",
+    "    d_ff=2048,\n",
+    "    dropout=0.4,\n",
+    "    attn_dropout=0.0,\n",
+    "    patch_len=28,\n",
+    "    stride=24,\n",
+    "    padding_patch=True,\n",
+    "    revin=True,\n",
+    "    affine=False,\n",
+    "    individual=False,\n",
+    "    subtract_last=False,\n",
+    "    decomposition=False,\n",
+    "    kernel_size=25,\n",
+    "    activation=\"gelu\",\n",
+    "    norm=\"BatchNorm\",\n",
+    "    pre_norm=False,\n",
+    "    res_attention=True,\n",
+    "    store_attn=False,\n",
+    ")\n",
+    "\n",
+    "atk_PatchTST = AttackPatchTST(\n",
+    "    hidden_dim=256,\n",
+    "    x_dim=1,\n",
+    "    activation_type=\"tanh\",\n",
+    "    patch_kwargs=patch_params,\n",
+    ")\n",
+    "\n",
+    "eps_PatchTST = 1\n",
+    "train_atk_model(atk_PatchTST, clf_PatchTST, train_dl,\n",
+    "                eps=eps_PatchTST,\n",
+    "                epochs=2, lr=2e-4, alpha_l2=1e-4,\n",
+    "                device=device, patience=8, is_debugged=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SEQ_LEN  = seq_len\n",
+    "X_DIM    = 1\n",
+    "DEVICE   = device\n",
+    "VICTIM   = LEARNING_TARGET\n",
+    "TRAIN_DL = train_dl\n",
+    "\n",
+    "def objective(trial: optuna.Trial):\n",
+    "\n",
+    "    # atk params\n",
+    "    eps        = trial.suggest_float(\"eps\",        0.1, 2,    log=True)\n",
+    "    lr         = trial.suggest_float(\"lr\",         1e-4, 1e0,  log=True)\n",
+    "    alpha_l2   = trial.suggest_float(\"alpha_l2\",   1e-5, 1e-2,  log=True)\n",
+    "    patience   = trial.suggest_int  (\"patience\",   3, 10)\n",
+    "\n",
+    "    # architecture\n",
+    "    hidden_dim = trial.suggest_categorical(\"hidden_dim\", [64, 128, 256])\n",
+    "\n",
+    "    # main hyperparams\n",
+    "    patch_len  = trial.suggest_int(\"patch_len\", 8, 48, step=4)\n",
+    "    stride_max = patch_len                      # stride не может превышать patch_len\n",
+    "    stride     = trial.suggest_int(\"stride\",    4, stride_max, step=4)\n",
+    "    n_layers   = trial.suggest_int(\"n_layers\",  1, 4)\n",
+    "    d_model    = trial.suggest_categorical(\"d_model\", [256, 512, 768])\n",
+    "    dropout    = trial.suggest_float(\"dropout\", 0.1, 0.6, step=0.1)\n",
+    "\n",
+    "    # patch-kwargs\n",
+    "    patch_kwargs = dict(\n",
+    "        seq_len       = SEQ_LEN,\n",
+    "        n_layers      = n_layers,\n",
+    "        n_heads       = 8,\n",
+    "        d_model       = d_model,\n",
+    "        d_ff          = 4 * d_model,\n",
+    "        dropout       = dropout,\n",
+    "        attn_dropout  = 0.0,\n",
+    "        patch_len     = patch_len,\n",
+    "        stride        = stride,\n",
+    "        padding_patch = True,\n",
+    "        revin         = True,\n",
+    "        affine        = False,\n",
+    "        individual    = False,\n",
+    "        subtract_last = False,\n",
+    "        decomposition = False,\n",
+    "        kernel_size   = 25,\n",
+    "        activation    = \"gelu\",\n",
+    "        norm          = \"BatchNorm\",\n",
+    "        pre_norm      = False,\n",
+    "        res_attention = True,\n",
+    "        store_attn    = False,\n",
+    "    )\n",
+    "\n",
+    "    surrogate = AttackPatchTST(\n",
+    "        hidden_dim     = hidden_dim,\n",
+    "        x_dim          = X_DIM,\n",
+    "        activation_type= \"tanh\",\n",
+    "        patch_kwargs   = patch_kwargs\n",
+    "    )\n",
+    "\n",
+    "    val_loss, val_acc = train_atk_model(\n",
+    "        surrogate, VICTIM, TRAIN_DL,\n",
+    "        eps=eps, epochs=50, lr=lr, alpha_l2=alpha_l2,\n",
+    "        device=DEVICE, patience=patience\n",
+    "    )\n",
+    "\n",
+    "    return val_acc\n",
+    "\n",
+    "\n",
+    "# sampler = optuna.samplers.TPESampler()\n",
+    "# pruner  = optuna.pruners.MedianPruner(n_warmup_steps=3)\n",
+    "\n",
+    "# study = optuna.create_study(direction=\"minimize\", sampler=sampler, pruner=pruner)\n",
+    "# study.optimize(objective, n_trials=50, timeout=60*60)\n",
+    "\n",
+    "# print(\"BEST PARAMS:\", study.best_params)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iter-PatchTST attack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
