Deploy_test iMBA_PatchTST

--- a/notebooks/deploy_test.ipynb
+++ b/notebooks/deploy_test.ipynb
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,8 @@
     "\n",
     "from source.attacks.mba import ModelBasedAttack \n",
     "\n",
-    "from source.training.train_attacker import train_atk_model"
+    "from source.training.train_attacker import train_atk_model\n",
+    "from source.training.train_iter_attack import train_attack_iter, prepare_victim_for_input_grad"
    ]
   },
   {
@@ -784,10 +785,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Δ] mean ||δ||_2 = 1.024 | mean ||δ||_∞ = 0.089\n",
+      "[Δ] mean ||x||_2 = 10.936 | mean ||x_adv||_2 = 11.393\n",
+      "[Δ] mean ||δ||_2 = 1.152 | mean ||δ||_∞ = 0.100\n",
+      "[Δ] mean ||x||_2 = 11.684 | mean ||x_adv||_2 = 12.089\n",
+      "[Δ] mean ||δ||_2 = 1.516 | mean ||δ||_∞ = 0.130\n",
+      "[Δ] mean ||x||_2 = 11.000 | mean ||x_adv||_2 = 11.580\n",
+      "Epoch 01 | victim-loss 0.4845 | acc 0.9500\n",
+      "[Δ] mean ||δ||_2 = 1.938 | mean ||δ||_∞ = 0.166\n",
+      "[Δ] mean ||x||_2 = 10.740 | mean ||x_adv||_2 = 11.297\n",
+      "[Δ] mean ||δ||_2 = 2.067 | mean ||δ||_∞ = 0.176\n",
+      "[Δ] mean ||x||_2 = 11.039 | mean ||x_adv||_2 = 11.651\n",
+      "[Δ] mean ||δ||_2 = 2.532 | mean ||δ||_∞ = 0.215\n",
+      "[Δ] mean ||x||_2 = 12.035 | mean ||x_adv||_2 = 12.770\n",
+      "Epoch 02 | victim-loss 0.4847 | acc 0.9500\n",
+      "[done] val_loss=0.4847  |  val_acc(after attack)=0.9500\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "attacker = AttackPatchTST(hidden_dim=256, x_dim=1, activation_type='tanh',\n",
+    "                          patch_kwargs=patch_params).to(device)\n",
+    "\n",
+    "target = LEARNING_TARGET\n",
+    "prepare_victim_for_input_grad(target)\n",
+    "\n",
+    "disc = None\n",
+    "best = {'eps': 0.4,\n",
+    "         'lr': 1e-4,\n",
+    "         'alpha_l2': 1e-4,\n",
+    "         'steps': 1, 'use_alpha_explicit': False, \n",
+    "         'proj': 'none', 'proj_equal_eps': True, 'rand_init': False, 'bpda': False, \n",
+    "         'use_sign': False, 'momentum_mu': 0.9, 'step_normalize': None, \n",
+    "         'step_noise_std': 0.004, 'victim_eval': True, 'hidden_dim': 128}\n",
+    "best['alpha'] = None\n",
+    "\n",
+    "alpha_explicit = None\n",
+    "\n",
+    "val_loss, val_acc = train_attack_iter(\n",
+    "    attacker=attacker,\n",
+    "    victim=target,\n",
+    "    loader=train_dl,\n",
+    "\n",
+    "    eps=best[\"eps\"],\n",
+    "    steps=best[\"steps\"],\n",
+    "    alpha=alpha_explicit,\n",
+    "    epochs=2,\n",
+    "    lr=best[\"lr\"],\n",
+    "    alpha_l2=best[\"alpha_l2\"],\n",
+    "\n",
+    "    lambda_disc=0.0,\n",
+    "    disc=disc,\n",
+    "    device=device,\n",
+    "    patience=8,\n",
+    "\n",
+    "    data_clamp=None,\n",
+    "    rand_init=best[\"rand_init\"],\n",
+    "    use_sign=best[\"use_sign\"],\n",
+    "    equal_eps=best[\"proj_equal_eps\"],\n",
+    "    bpda=best[\"bpda\"],\n",
+    "    verbose=True,\n",
+    "\n",
+    "    proj=best[\"proj\"],\n",
+    "    proj_equal_eps=best[\"proj_equal_eps\"],\n",
+    "    momentum_mu=best[\"momentum_mu\"],      \n",
+    "    step_normalize=best[\"step_normalize\"],\n",
+    "    step_noise_std=best[\"step_noise_std\"],\n",
+    "    victim_eval=best[\"victim_eval\"],      \n",
+    "    grad_clip=None,                       \n",
+    ")\n",
+    "\n",
+    "print(f\"[done] val_loss={val_loss:.4f}  |  val_acc(after attack)={val_acc:.4f}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Сomparison of attacks"
+   ]
   }
  ],
  "metadata": {
